fix some layout issues

--- a/components/cards/Cards.module.css
+++ b/components/cards/Cards.module.css
@@ -31,9 +31,10 @@
 .tipContainer {
   height: 50vh;
   padding: 24px;
-  display: grid;
-  grid-auto-rows: max-content;
-  grid-gap: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  justify-content: center;
 }
 
 .tip {
@@ -55,18 +56,27 @@
   transform: rotate(-90deg);
 }
 
+.content {
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  padding-top: 24px;
+}
+
 .skeleton {
-  margin: 24px;
+  margin: 0 24px 24px;
   transition: margin 0.2s ease-in-out;
 }
 
 .skeleton_arrows {
-  margin: 24px 56px;
+  margin: 0 56px 24px;
 }
 
 .slider {
   margin: auto;
   width: 100%;
+  height: 100%;
+  display: flex;
 }
 
 .pagination {
@@ -74,7 +84,7 @@
 }
 
 .arrow {
-  top: calc(400px / 2);
+  top: calc(50vh / 2 - 24px - 10px);
 }
 
 .arrow:disabled {
